[metadata]
name = rpi5-ws2812
version = attr: rpi5_ws2812.__version__
authors = Niklas Rousset
author_email = byrousset@gmail.com
description = A library to control WS2812 LEDs with a Raspberry Pi 5
keywords = ["raspberry", "pi", "rpi", "ws2812", "led", "spi"] 
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
url = https://github.com/niklasr22/rpi5-ws2812
project_urls =
    Bug Tracker = https://github.com/niklasr22/rpi5-ws2812/issues


[options]
include_package_data = True
python_requires = >=3.11
install_requires =
    spidev
    numpy
package_dir=
    =src
packages=find:

[options.packages.find]
where=src